cliente-svc-statefulset-nodeport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: "tonanuvem/frontend_clientes_microservice"
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
      nodePort: 32000
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: "tonanuvem/backend_clientes_microservice"
          ports:
            - name: http
              containerPort: 5000
          resources:
            limits:
              cpu: 250m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 50Mi
          livenessProbe:
            httpGet:
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
---
kind: Service
apiVersion: v1
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: "TCP"
      port: 5000
      targetPort: 5000
      nodePort: 32500
  type: NodePort
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  labels:
    name: mongo
spec:
  serviceName: "mongo" # Campo obrigatório no StatefulSet. Aponta para o um Headless Service.
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        # Definindo requests iniciais baixos para que o VPA possa ajustá-los.
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
        ports:
        - name: mongo
          containerPort: 27017
        securityContext:
          capabilities:
            drop:
              - all
            add:
              - CHOWN
              - SETGID
              - SETUID
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    name: mongo
spec:
  ports:
    # the port that this service should serve on
  - port: 27017
    #targetPort: 27017
    name: mongo
  clusterIP: None # A configuração "None" torna o serviço "Headless".
  selector:
    app: mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoexpress
  labels:
    app: mongoexpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongoexpress
  template:
    metadata:
      labels:
        app: mongoexpress
    spec:
      containers:
        - name: mongoexpress
          image: "mongo-express"
          ports:
            - name: http
              containerPort: 8081
---
kind: Service
apiVersion: v1
metadata:
  name: mongoexpress
spec:
  selector:
    app: mongoexpress
  ports:
    - protocol: "TCP"
      port: 8081
      targetPort: 8081
      nodePort: 32081
  type: NodePort
---
