vol_clientes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: "tonanuvem/frontend_clientes_microservice"
          ports:
            - name: http
              containerPort: 80
      tolerations:
      - key: node.kubernetes.io/not-ready
        effect: NoExecute
        tolerationSeconds: 0
      - key: node.kubernetes.io/unreachable
        effect: NoExecute
        tolerationSeconds: 0
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
      nodePort: 32000
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: "tonanuvem/backend_clientes_microservice"
          ports:
            - name: http
              containerPort: 5000
---
kind: Service
apiVersion: v1
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: "TCP"
      port: 5000
      targetPort: 5000
#      nodePort: 32500
#  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoexpress
  labels:
    app: mongoexpress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongoexpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongoexpress
    spec:
      containers:
        - name: mongoexpress
          image: "mongo-express"
          ports:
            - name: http
              containerPort: 8081
---
kind: Service
apiVersion: v1
metadata:
  name: mongoexpress
spec:
  selector:
    app: mongoexpress
  ports:
    - protocol: "TCP"
      port: 8081
      targetPort: 8081
      nodePort: 32081
  type: NodePort
