vol_mongo-deploy-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clientes-frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: clientes-frontend
          image: "tonanuvem/frontend_clientes_microservice"
          ports:
            - name: http
              containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: clientes-frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
      nodePort: 32000
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clientes-backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: clientes-backend
          image: "tonanuvem/backend_clientes_microservice"
          ports:
            - name: http
              containerPort: 5000
---
kind: Service
apiVersion: v1
metadata:
  name: clientes-backend
spec:
  selector:
    app: backend
  ports:
    - protocol: "TCP"
      port: 5000
      targetPort: 5000
#      nodePort: 32500
#  type: NodePort
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: clientes-mongo
  labels:
    name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: clientes-mongo
        image: mongo
        ports:
        - name: mongo
          containerPort: 27017
        volumeMounts:
        - mountPath: /data
          name: data-volume
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: clientes-mongo
  labels:
    name: mongo
spec:
  ports:
    # the port that this service should serve on
  - port: 27017
    targetPort: 27017
  selector:
    app: mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clientes-mongoexpress
  labels:
    app: mongoexpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongoexpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongoexpress
    spec:
      containers:
        - name: clientes-mongoexpress
          image: "mongo-express"
          ports:
            - name: http
              containerPort: 8081
---
kind: Service
apiVersion: v1
metadata:
  name: clientes-mongoexpress
spec:
  selector:
    app: mongoexpress
  ports:
    - protocol: "TCP"
      port: 8081
      targetPort: 8081
      nodePort: 32081
  type: NodePort
