ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigateway-clientes
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /clientes
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
